--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
         <head>
                 <meta charset="utf-8">
                 <title>Documento</title>
+                <link href="Estilos.css" rel="stylesheet" type="text/css">
         </head>
         <body>
                 
