Color de letra y tipo

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,6 @@
                 <link href="Estilos.css" rel="stylesheet" type="text/css">
         </head>
         <body>
-                
+                <h1>"Proyecto chido"</h1>
         </body>
 </html>
