Saludo con javascript aagregada

--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,13 @@
                 <meta charset="utf-8">
                 <title>Documento</title>
                 <link href="Estilos.css" rel="stylesheet" type="text/css">
+<script src="javascript.js"></script>
+
         </head>
         <body>
                 <h1>"Proyecto chido"</h1>
                 <p>Parrafo agregado</p>
+
+                <input type ="button" onclick="sumar()" value="Click Aqui">
         </body>
 </html>
