Agregamos cambios en Index

--- a/Index.html
+++ b/Index.html
@@ -12,10 +12,7 @@
                 <p>Parrafo agregado</p>
 
 
-
-
-
-
+                <h2>"Una gran idea"</h2>
 
                 <p>"otro parrafo"</p>
                 <input type ="button" onclick="sumar()" value="Click Aqui">
