--- a/Index.html
+++ b/Index.html
@@ -12,9 +12,9 @@
                 <p>Parrafo agregado</p>
 
 
-                <h2>"Una gran idea se me ha ocurrido"</h2>
+                <h2>"Una gran idea se me ha ocurrido, y es seguir agregando texto"</h2>
 
-                <p>"otro parrafo"</p>
+                <p>"otro parrafo, y este es lo que agregue desde el branch diseñador."</p>
                 <input type ="button" onclick="sumar()" value="Click Aqui">
         </body>
 </html>
